--- a/HWCollectionView/Base.lproj/Main.storyboard
+++ b/HWCollectionView/Base.lproj/Main.storyboard
@@ -8,6 +8,7 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
         <capability name="Alignment constraints to the first baseline" minToolsVersion="6.0"/>
         <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -93,7 +94,7 @@
                                 <color key="textColor" red="0.40000000600000002" green="0.40000000600000002" blue="0.40000000600000002" alpha="1" colorSpace="calibratedRGB"/>
                                 <color key="highlightedColor" red="0.40000000600000002" green="0.40000000600000002" blue="0.40000000600000002" alpha="1" colorSpace="calibratedRGB"/>
                             </label>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Uxa-Js-V0A">
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Uxa-Js-V0A">
                                 <rect key="frame" x="0.0" y="265" width="375" height="402"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
@@ -163,6 +164,11 @@
                                 <action selector="infoButtonPressed:" destination="BYZ-38-t0r" id="zf2-J8-hH3"/>
                             </connections>
                         </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="p6s-Xi-rZ5">
+                            <connections>
+                                <action selector="addElements:" destination="BYZ-38-t0r" id="HuA-LW-qp4"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                     <connections>
                         <outlet property="collectionView" destination="Uxa-Js-V0A" id="ujk-ce-5Cx"/>
@@ -180,6 +186,112 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="uhi-7x-Au4" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="882" y="941"/>
+        </scene>
+        <!--Detail Collection View-->
+        <scene sceneID="f2V-Kg-OXj">
+            <objects>
+                <viewController storyboardIdentifier="DetailCollectionView" id="X2X-fN-6mp" customClass="DetailCollectionView" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="zZ6-2P-WJZ"/>
+                        <viewControllerLayoutGuide type="bottom" id="WNR-Dz-abk"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="h2r-0y-2L1">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="nup-WL-d7I">
+                                <rect key="frame" x="136" y="61" width="192" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" returnKeyType="done" enablesReturnKeyAutomatically="YES"/>
+                            </textField>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="KYz-j1-gAr">
+                                <rect key="frame" x="16" y="20" width="112" height="112"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="112" id="Hxt-Hx-RmK"/>
+                                    <constraint firstAttribute="width" secondItem="KYz-j1-gAr" secondAttribute="height" multiplier="1:1" id="QKx-p9-UBx"/>
+                                    <constraint firstAttribute="width" constant="112" id="SJ6-12-EzG"/>
+                                </constraints>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DXP-T8-ToL">
+                                <rect key="frame" x="0.0" y="511" width="180" height="57"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="57" id="mcp-ws-8Ad"/>
+                                </constraints>
+                                <state key="normal" title="save"/>
+                                <connections>
+                                    <action selector="saveActionButton:" destination="X2X-fN-6mp" eventType="touchUpInside" id="XyE-hh-V77"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Vn6-Dt-Pio">
+                                <rect key="frame" x="187" y="511" width="188" height="57"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="57" id="tkN-zk-tiz"/>
+                                </constraints>
+                                <state key="normal" title="delete"/>
+                                <connections>
+                                    <action selector="deleteActionButton:" destination="X2X-fN-6mp" eventType="touchUpInside" id="O6z-P4-Zga"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="syW-zv-JZy">
+                                <rect key="frame" x="0.0" y="583" width="375" height="57"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="57" id="DBa-mU-GfT"/>
+                                </constraints>
+                                <state key="normal" title="skip"/>
+                                <connections>
+                                    <action selector="skipActionButton:" destination="X2X-fN-6mp" eventType="touchUpInside" id="Xto-Pi-6uK"/>
+                                </connections>
+                            </button>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="DS3-EO-hx1">
+                                <rect key="frame" x="16" y="174" width="343" height="269"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="uhx-O4-QiW">
+                                    <size key="itemSize" width="50" height="50"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells/>
+                                <connections>
+                                    <outlet property="dataSource" destination="X2X-fN-6mp" id="F7g-Ef-r7c"/>
+                                    <outlet property="delegate" destination="X2X-fN-6mp" id="0vN-HJ-4tc"/>
+                                </connections>
+                            </collectionView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="DS3-EO-hx1" firstAttribute="leading" secondItem="h2r-0y-2L1" secondAttribute="leadingMargin" id="89M-h0-aqk"/>
+                            <constraint firstAttribute="trailing" secondItem="syW-zv-JZy" secondAttribute="trailing" id="8dy-BG-gdw"/>
+                            <constraint firstItem="DS3-EO-hx1" firstAttribute="trailing" secondItem="h2r-0y-2L1" secondAttribute="trailingMargin" id="E5q-cN-Yer"/>
+                            <constraint firstItem="WNR-Dz-abk" firstAttribute="top" secondItem="DS3-EO-hx1" secondAttribute="bottom" constant="224" id="IB3-b7-pWn"/>
+                            <constraint firstItem="syW-zv-JZy" firstAttribute="leading" secondItem="h2r-0y-2L1" secondAttribute="leading" id="K0X-zn-wny"/>
+                            <constraint firstAttribute="trailing" secondItem="Vn6-Dt-Pio" secondAttribute="trailing" id="M0r-PJ-8Uc"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="DXP-T8-ToL" secondAttribute="trailing" constant="179" id="O1l-7T-PXa"/>
+                            <constraint firstItem="nup-WL-d7I" firstAttribute="leading" secondItem="KYz-j1-gAr" secondAttribute="trailing" constant="8" id="OUz-LD-T5F"/>
+                            <constraint firstItem="nup-WL-d7I" firstAttribute="top" secondItem="zZ6-2P-WJZ" secondAttribute="bottom" constant="41" id="QzC-aL-07V"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="nup-WL-d7I" secondAttribute="trailing" constant="31" id="UOl-v4-imN"/>
+                            <constraint firstItem="Vn6-Dt-Pio" firstAttribute="leading" secondItem="h2r-0y-2L1" secondAttribute="leadingMargin" constant="171" id="V6m-H7-2QC"/>
+                            <constraint firstItem="syW-zv-JZy" firstAttribute="top" secondItem="DXP-T8-ToL" secondAttribute="bottom" constant="15" id="bOp-aR-bVh"/>
+                            <constraint firstItem="KYz-j1-gAr" firstAttribute="top" secondItem="zZ6-2P-WJZ" secondAttribute="bottom" id="cPT-q6-N2v"/>
+                            <constraint firstItem="DXP-T8-ToL" firstAttribute="leading" secondItem="h2r-0y-2L1" secondAttribute="leading" id="eD4-06-Xqe"/>
+                            <constraint firstAttribute="leadingMargin" secondItem="KYz-j1-gAr" secondAttribute="leading" id="fUA-Zm-fLR"/>
+                            <constraint firstItem="DS3-EO-hx1" firstAttribute="top" secondItem="KYz-j1-gAr" secondAttribute="bottom" constant="42" id="nx5-v7-5KS"/>
+                            <constraint firstItem="syW-zv-JZy" firstAttribute="top" secondItem="Vn6-Dt-Pio" secondAttribute="bottom" constant="15" id="qJx-wx-xph"/>
+                            <constraint firstItem="WNR-Dz-abk" firstAttribute="top" secondItem="syW-zv-JZy" secondAttribute="bottom" constant="27" id="rWs-wR-q9y"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="addButton" destination="DXP-T8-ToL" id="Mai-hR-hHi"/>
+                        <outlet property="collectionView" destination="DS3-EO-hx1" id="kGe-d7-IGy"/>
+                        <outlet property="deleteButton" destination="Vn6-Dt-Pio" id="dXo-eo-2LI"/>
+                        <outlet property="imageView" destination="KYz-j1-gAr" id="jgD-du-dKC"/>
+                        <outlet property="textField" destination="nup-WL-d7I" id="WWZ-V3-FWR"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="nSx-fX-j8k" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1744.8" y="138.98050974512745"/>
         </scene>
         <!--Tutorial View Controller-->
         <scene sceneID="q9W-7a-shR">
