--- a/HWCollectionView/CollectionViewCell.xib
+++ b/HWCollectionView/CollectionViewCell.xib
@@ -12,23 +12,45 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="Cell" id="gTV-IL-0wX" customClass="CollectionViewCell">
-            <rect key="frame" x="0.0" y="0.0" width="300" height="300"/>
+            <rect key="frame" x="0.0" y="0.0" width="237" height="207"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="300" height="300"/>
+                <rect key="frame" x="0.0" y="0.0" width="237" height="207"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Byv-cc-j4f">
-                        <rect key="frame" x="0.0" y="0.0" width="300" height="300"/>
-                        <autoresizingMask key="autoresizingMask" heightSizable="YES"/>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Byv-cc-j4f">
+                        <rect key="frame" x="0.0" y="0.0" width="237" height="207"/>
                     </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="SomeText" textAlignment="center" lineBreakMode="middleTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kb3-Hu-ah1">
+                        <rect key="frame" x="0.0" y="187" width="237" height="20"/>
+                        <color key="backgroundColor" cocoaTouchSystemColor="lightTextColor"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="20" id="Fkd-jL-7WX"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" name="KohinoorTelugu-Regular" family="Kohinoor Telugu" pointSize="17"/>
+                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
             </view>
-            <size key="customSize" width="190" height="144"/>
+            <constraints>
+                <constraint firstItem="Byv-cc-j4f" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="7zk-Ve-Wd2"/>
+                <constraint firstAttribute="trailing" secondItem="Byv-cc-j4f" secondAttribute="trailing" id="BaB-cZ-BnC"/>
+                <constraint firstItem="Kb3-Hu-ah1" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="Cdm-2t-MGg"/>
+                <constraint firstAttribute="bottom" secondItem="Kb3-Hu-ah1" secondAttribute="bottom" id="Wj2-53-RbS"/>
+                <constraint firstItem="Byv-cc-j4f" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="ZAg-ex-WNb"/>
+                <constraint firstAttribute="trailing" secondItem="Kb3-Hu-ah1" secondAttribute="trailing" id="bdD-Br-3sJ"/>
+                <constraint firstAttribute="bottom" secondItem="Byv-cc-j4f" secondAttribute="bottom" id="h82-WW-yhq"/>
+                <constraint firstAttribute="bottom" secondItem="Byv-cc-j4f" secondAttribute="bottom" id="pEz-Q2-UG1"/>
+                <constraint firstItem="Byv-cc-j4f" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="rSe-6x-Pzh"/>
+                <constraint firstAttribute="trailing" secondItem="Byv-cc-j4f" secondAttribute="trailing" id="zmO-8Y-JNw"/>
+            </constraints>
+            <size key="customSize" width="127" height="51"/>
             <connections>
                 <outlet property="imageViewCell" destination="Byv-cc-j4f" id="oLB-YT-5ot"/>
+                <outlet property="labelCell" destination="Kb3-Hu-ah1" id="ZRc-8V-Ndz"/>
             </connections>
-            <point key="canvasLocation" x="104" y="107"/>
+            <point key="canvasLocation" x="72.5" y="60.5"/>
         </collectionViewCell>
     </objects>
 </document>
