--- a/HWCollectionView/Base.lproj/Main.storyboard
+++ b/HWCollectionView/Base.lproj/Main.storyboard
@@ -151,12 +151,15 @@
                                                     <constraint firstAttribute="bottom" secondItem="ePR-q8-sH0" secondAttribute="bottom" id="dyz-hH-CWD"/>
                                                 </constraints>
                                             </view>
-                                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="grh-Mu-DVl">
-                                                <rect key="frame" x="8" y="66" width="220" height="25"/>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="grh-Mu-DVl">
+                                                <rect key="frame" x="8" y="66" width="220" height="29"/>
                                                 <color key="backgroundColor" red="0.71636666440721697" green="0.71636666440721697" blue="0.71636666440721697" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <state key="normal" title="Редактировать профиль">
                                                     <color key="titleColor" red="0.56513332049858755" green="0.56513332049858755" blue="0.56513332049858755" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 </state>
+                                                <connections>
+                                                    <segue destination="NDQ-L6-Ufe" kind="show" identifier="" id="pb7-z5-I0r"/>
+                                                </connections>
                                             </button>
                                         </subviews>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -232,101 +235,22 @@
                     <navigationItem key="navigationItem" id="UPP-q5-YMk">
                         <barButtonItem key="leftBarButtonItem" systemItem="action" id="99L-2M-bQr">
                             <connections>
-                                <segue destination="7qq-kz-EU2" kind="show" id="16X-GJ-YWW"/>
+                                <segue destination="jkf-5M-pEm" kind="presentation" id="16X-GJ-YWW"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
                     <connections>
+                        <outlet property="aboutLabel" destination="4do-Se-oNM" id="ybW-nM-Wwi"/>
                         <outlet property="collectionView" destination="Yod-At-ejs" id="1Xi-Fb-ufH"/>
                         <outlet property="flowLayout" destination="YdW-1b-yi9" id="YA7-fs-CIN"/>
                         <outlet property="mainPhoto" destination="d4e-y6-bR2" id="zwd-Wi-Gj3"/>
+                        <outlet property="nikNameLabel" destination="pXC-zu-8UC" id="z4g-sj-akW"/>
                         <segue destination="FjW-Xl-XBy" kind="show" identifier="showImage" id="9IU-iB-4EZ"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1063" y="127"/>
-        </scene>
-        <!--Root Page View Controller-->
-        <scene sceneID="ofc-Zg-ebI">
-            <objects>
-                <viewController storyboardIdentifier="RootPageViewController" id="7qq-kz-EU2" customClass="RootPageViewController" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="6fS-4C-Mit"/>
-                        <viewControllerLayoutGuide type="bottom" id="ezM-XU-wUZ"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="Nfq-qm-iKc">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gPg-Rb-RDo">
-                                <rect key="frame" x="119" y="538" width="82" height="30"/>
-                                <state key="normal" title="Skip it dude"/>
-                                <connections>
-                                    <action selector="skipButtonDidPressed:" destination="7qq-kz-EU2" eventType="touchUpInside" id="XaO-gb-uFa"/>
-                                    <segue destination="Hmb-VR-EJO" kind="presentation" id="yug-x0-6Cg"/>
-                                </connections>
-                            </button>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstItem="gPg-Rb-RDo" firstAttribute="centerX" secondItem="Nfq-qm-iKc" secondAttribute="centerX" id="UC1-4D-CF9"/>
-                            <constraint firstItem="ezM-XU-wUZ" firstAttribute="top" secondItem="gPg-Rb-RDo" secondAttribute="bottom" id="oyz-W1-XCe"/>
-                        </constraints>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="fUX-aV-bWa" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-793" y="1050"/>
-        </scene>
-        <!--Page View Controller-->
-        <scene sceneID="aQT-Yr-jLN">
-            <objects>
-                <pageViewController storyboardIdentifier="PageViewController" autoresizesArchivedViewToFullSize="NO" transitionStyle="scroll" navigationOrientation="horizontal" spineLocation="none" id="MWq-Op-sB9" customClass="PageViewController" sceneMemberID="viewController"/>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="ncY-Ea-Rjp" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="855" y="1113"/>
-        </scene>
-        <!--Page Content View Controller-->
-        <scene sceneID="mXs-Xz-xWV">
-            <objects>
-                <viewController storyboardIdentifier="PageContentViewController" id="TkO-ij-Whi" customClass="PageContentViewController" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="X8Y-Uq-hY9"/>
-                        <viewControllerLayoutGuide type="bottom" id="zwU-8u-Bwq"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="Dqy-lx-194">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="c7q-bd-sKi">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
-                            </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AcI-Bw-r8P">
-                                <rect key="frame" x="127.5" y="28" width="66.5" height="33.5"/>
-                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstAttribute="trailing" secondItem="c7q-bd-sKi" secondAttribute="trailing" id="0wE-Or-l3g"/>
-                            <constraint firstItem="AcI-Bw-r8P" firstAttribute="top" secondItem="X8Y-Uq-hY9" secondAttribute="bottom" constant="8" id="HBS-dt-zh5"/>
-                            <constraint firstItem="c7q-bd-sKi" firstAttribute="leading" secondItem="Dqy-lx-194" secondAttribute="leading" id="XCw-ud-S91"/>
-                            <constraint firstItem="zwU-8u-Bwq" firstAttribute="top" secondItem="c7q-bd-sKi" secondAttribute="bottom" id="eVQ-gT-cyo"/>
-                            <constraint firstItem="AcI-Bw-r8P" firstAttribute="centerX" secondItem="c7q-bd-sKi" secondAttribute="centerX" id="k69-nv-RTw"/>
-                            <constraint firstItem="c7q-bd-sKi" firstAttribute="top" secondItem="Dqy-lx-194" secondAttribute="top" id="t8m-AQ-Dca"/>
-                        </constraints>
-                    </view>
-                    <connections>
-                        <outlet property="backGroundImage" destination="c7q-bd-sKi" id="ZPY-h1-ucy"/>
-                        <outlet property="titleLabel" destination="AcI-Bw-r8P" id="WA6-7o-ywB"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="7qg-13-FLe" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1659.375" y="1129.2253521126761"/>
         </scene>
         <!--Show One Photo View Controller-->
         <scene sceneID="wsf-zB-kEM">
@@ -374,7 +298,42 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zmu-2a-HCh" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1989.375" y="-72.887323943661968"/>
+            <point key="canvasLocation" x="1943" y="93"/>
+        </scene>
+        <!--Settings View Controller-->
+        <scene sceneID="2C8-Ez-ndF">
+            <objects>
+                <viewController id="NDQ-L6-Ufe" customClass="SettingsViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="lhg-bF-ktI"/>
+                        <viewControllerLayoutGuide type="bottom" id="fMf-ek-Cg2"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="gGS-0b-HpF">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="4lP-tZ-6Nz">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="524"/>
+                                <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="fMf-ek-Cg2" firstAttribute="top" secondItem="4lP-tZ-6Nz" secondAttribute="bottom" id="6Cf-ll-ixT"/>
+                            <constraint firstItem="4lP-tZ-6Nz" firstAttribute="leading" secondItem="gGS-0b-HpF" secondAttribute="leading" id="Mt4-4Q-jF2"/>
+                            <constraint firstAttribute="trailing" secondItem="4lP-tZ-6Nz" secondAttribute="trailing" id="lnp-Vh-Rh9"/>
+                            <constraint firstItem="4lP-tZ-6Nz" firstAttribute="top" secondItem="gGS-0b-HpF" secondAttribute="top" id="rBm-sz-X74"/>
+                        </constraints>
+                    </view>
+                    <toolbarItems/>
+                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
+                    <connections>
+                        <outlet property="tableView" destination="4lP-tZ-6Nz" id="qVx-q7-C2g"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="IRF-hJ-SEr" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1061" y="-562"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="bQc-6H-2ts">
@@ -394,6 +353,14 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="sQZ-rJ-hVp" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="94" y="167"/>
+        </scene>
+        <!--RootPageViewController-->
+        <scene sceneID="Gc0-Tx-nir">
+            <objects>
+                <viewControllerPlaceholder storyboardIdentifier="RootPageViewController" storyboardName="Presentation" referencedIdentifier="RootPageViewController" id="jkf-5M-pEm" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Cr9-0F-Yq9" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="94" y="1112"/>
         </scene>
     </scenes>
 </document>
